Added rudimentary responsive styling

--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -14,3 +14,7 @@ $snow6: #f4f4f4;
 
 /* ------------------------------------------------------------------- FAMILY --- */
 $family: ('Inter', sans-serif);
+
+/* -------------------------------------------------------------------- BREAK --- */
+$break1: 1200px;
+$break0: 832px;
