--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -39,8 +39,8 @@
 /* ------------------------------------------------------------------ CONTROL --- */
 @import 'module/control';
 
-/* ------------------------------------------------------------------- DETAIL --- */
-@import 'module/detail';
+/* --------------------------------------------------------------------- DATA --- */
+@import 'module/data';
 
 /* ---------------------------------------------------------------------- MAP --- */
 @import 'module/map';
