Added track detail stats and splits

--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -3,6 +3,9 @@
 /* ////////////////////////////////////////////////////////////////////////////// */
 
 /* -------------------------------------------------------------------- COLOR --- */
+/* plum */
+$plum6: #dd1c77;
+
 /* grey */
 $grey9: #535353;
 $grey6: #a2a2a2;
