--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -22,6 +22,17 @@
 
 
 /* ////////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////// COMPONENT /// */
+/* ////////////////////////////////////////////////////////////////////////////// */
+
+/* -------------------------------------------------------------------- ASIDE --- */
+@import 'component/aside';
+
+/* -------------------------------------------------------------------- GROUP --- */
+@import 'component/group';
+
+
+/* ////////////////////////////////////////////////////////////////////////////// */
 /* /////////////////////////////////////////////////////////////////// LAYOUT /// */
 /* ////////////////////////////////////////////////////////////////////////////// */
 
@@ -41,6 +52,9 @@
 
 /* --------------------------------------------------------------------- DATA --- */
 @import 'module/data';
+
+/* ------------------------------------------------------------------- DETAIL --- */
+@import 'module/detail';
 
 /* ---------------------------------------------------------------------- MAP --- */
 @import 'module/map';
