--- a/src/scss/global/_font.scss
+++ b/src/scss/global/_font.scss
@@ -3,4 +3,4 @@
 /* ////////////////////////////////////////////////////////////////////////////// */
 
 /* -------------------------------------------------------------------- INTER --- */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
+@import url('https://rsms.me/inter/inter.css');
