--- a/src/scss/module/_map.scss
+++ b/src/scss/module/_map.scss
@@ -8,13 +8,19 @@ section.map {
     background-color: $snow6;
     @include position-fill(absolute);
     @media (min-width: ($break1 + 1px)) {
-        padding: 24px 24px 204px;
+        padding: 24px 24px 198px;
     }
     @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
         padding: 24px 24px 24px 288px;
     }
     @media (max-width: $break0) {
         padding: 16px 16px 166px;
+    }
+}
+
+html.detail_active section.map {
+    @media (min-width: ($break1 + 1px)) {
+        padding-left: 368px;
     }
 }
 
