Added fastest split gold delta bar

--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -161,3 +161,6 @@ aside.detail .group.split table td.delta div {
     background-color: $plum6;
     border-radius: 2px;
 }
+aside.detail .group.split table tr.fastest td.delta div {
+    background-color: $gold6;
+}
