--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -12,6 +12,10 @@ body {
 }
 
 /* ------------------------------------------------------------------ HEADING --- */
+h1 {
+    font-size: 18px;
+    font-weight: 600;
+}
 h2 {
     font-size: 16px;
     font-weight: 600;
