--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -11,7 +11,6 @@ aside.detail {
         width: 320px;
         height: calc((100% - 222px));
         margin: 24px;
-        overflow: hidden;
         flex-flow: column;
         transform: translateX(calc(((100% + 24px) * -1)));
         transition: transform 160ms;
@@ -27,12 +26,30 @@ aside.detail.display {
         transform: translateX(0);
     }
 }
+
+/* -------------------------------------------------------------------- INNER --- */
 aside.detail > div {
+    position: relative;
     max-height: 100%;
+    overflow: hidden;
     background-color: white;
-    box-shadow: 0 0 24px rgba($grey9, 0.125);
     border-radius: 4px;
     pointer-events: all;
+}
+aside.detail.display > div {
+    box-shadow: 0 0 24px rgba($grey9, 0.125);
+}
+aside.detail > div::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 24px;
+    content: '';
+    background-image: linear-gradient(rgba(white, 0), rgba(white, 1));
+    border-radius: 0 0 4px 4px;
 }
 
 /* ------------------------------------------------------------------- SCROLL --- */
@@ -45,14 +62,35 @@ aside.detail .scroll {
     flex-flow: column;
 }
 
+/* --------------------------------------------------------------------- META --- */
+aside.detail .meta {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding: 24px 24px 12px;
+    background-color: white;
+}
+aside.detail .meta h1 {
+    margin-bottom: 8px;
+    color: $grey9;
+}
+aside.detail .meta time {
+    color: $grey6;
+    font-size: 12px;
+}
+
 /* ------------------------------------------------------------------ HEADING --- */
 aside.detail h2 {
     position: sticky;
-    top: 0;
-    padding: 12px 0 12px;
-    flex-basis: 100%;
+    top: 74px;
+    width: calc((100% + 48px));
+    padding: 8px 24px 12px;
+    margin: 0 -24px;
     color: $grey9;
     background-color: white;
+}
+aside.detail h2[stuck] {
+    box-shadow: 0 0 8px rgba(black, 0.25);
 }
 aside.detail h3 {
     margin-bottom: 6px;
@@ -68,11 +106,14 @@ aside.detail h3::after {
 
 /* -------------------------------------------------------------------- GROUP --- */
 aside.detail .group {
+    z-index: 1;
     display: flex;
+    padding: 0 24px 24px;
     flex-wrap: wrap;
-    @media (min-width: ($break1 + 1px)) {
-        padding: 12px 24px 24px;
-    }
+    background-color: white;
+}
+aside.detail .group:not(:nth-child(2)) {
+    padding-top: 12px;
 }
 aside.detail .group:not(:last-child) {
     border-bottom: 1px solid $grey0;
