--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -56,7 +56,7 @@ aside.detail > div::after {
 aside.detail .scroll {
     display: flex;
     width: calc(100% + 32px);
-    height: 100%;
+    max-height: 100%;
     padding-right: 32px;
     overflow: scroll;
     flex-flow: column;
