Added improved control styling

--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -4,10 +4,14 @@
 
 /* -------------------------------------------------------------------- COLOR --- */
 /* plum */
+$plum9: #c6196b;
 $plum6: #dd1c77;
 
+/* moss */
+$moss6: #438a13;
+
 /* gold */
-$gold6: #ffd700;
+$gold6: #fbc531;
 
 /* grey */
 $grey9: #535353;
