Added track awards

--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -12,6 +12,11 @@ $moss6: #438a13;
 
 /* gold */
 $gold6: #fbc531;
+$gold0: #fffbef;
+
+/* coco */
+$coco6: #b08159;
+$coco0: #f2eae3;
 
 /* grey */
 $grey9: #535353;
@@ -21,6 +26,7 @@ $grey0: #ebebeb;
 
 /* snow */
 $snow6: #f4f4f4;
+$snow3: #f9f9f9;
 
 /* ------------------------------------------------------------------- FAMILY --- */
 $family: ('Inter', sans-serif);
