--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -97,6 +97,7 @@ aside.detail .meta time.time::after {
 aside.detail h2 {
     position: sticky;
     top: 0;
+    z-index: 1;
     width: calc((100% + 48px));
     padding: 8px 24px 12px;
     margin: 0 -24px;
@@ -218,4 +219,70 @@ aside.detail .group.split table td.delta div {
 }
 aside.detail .group.split table tr.fastest td.delta div {
     background-color: $gold6;
+}
+
+/* ------------------------------------------------------------ GROUP : AWARD --- */
+aside.detail .group.award .item {
+    display: flex;
+    max-width: calc((((1 / 3) * 100%) - 4px));
+    padding: 12px 8px;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+    flex-flow: column;
+    border: 1px solid;
+    border-radius: 4px;
+}
+aside.detail .group.award .item:not(:last-child) {
+    margin-right: 6px;
+}
+aside.detail .group.award .item.gold {
+    background-color: $gold0;
+    border-color: $gold6;
+}
+aside.detail .group.award .item.silver {
+    background-color: $snow3;
+    border-color: $grey3;
+}
+aside.detail .group.award .item.bronze {
+    background-color: $coco0;
+    border-color: $coco6;
+}
+aside.detail .group.award .item::before {
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin-bottom: 6px;
+    content: '';
+    mask-position: center;
+    mask-size: contain;
+    mask-repeat: no-repeat;
+}
+aside.detail .group.award .item.gold::before {
+    background-color: $gold6;
+    mask-image: url('../gfx/medal/gold.svg');
+}
+aside.detail .group.award .item.silver::before {
+    background-color: $grey3;
+    mask-image: url('../gfx/medal/silver.svg');
+}
+aside.detail .group.award .item.bronze::before {
+    background-color: $coco6;
+    mask-image: url('../gfx/medal/bronze.svg');
+}
+aside.detail .group.award .item::after {
+    color: $grey9;
+    font-size: 10px;
+    line-height: 1.2;
+    text-align: center;
+    white-space: pre;
+}
+aside.detail .group.award .item.distance::after {
+    content: 'Longest\A Distance';
+}
+aside.detail .group.award .item.elevation::after {
+    content: 'Elevation\A Gain';
+}
+aside.detail .group.award .item.time::after {
+    content: 'Moving\A Time';
 }
