--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -123,7 +123,7 @@ aside.detail h3::after {
 aside.detail .group {
     z-index: 1;
     display: flex;
-    padding: 0 24px 24px;
+    padding: 0 24px 20px;
     flex-wrap: wrap;
     background-color: white;
 }
@@ -132,6 +132,9 @@ aside.detail .group:not(:nth-child(2)) {
 }
 aside.detail .group:not(:last-child) {
     border-bottom: 1px solid $grey0;
+}
+aside.detail .group:last-child {
+    padding-bottom: 24px;
 }
 
 /* ------------------------------------------------------------- GROUP : STAT --- */
