--- a/src/scss/module/_data.scss
+++ b/src/scss/module/_data.scss
@@ -4,65 +4,89 @@
 
 /* -------------------------------------------------------------------- ASIDE --- */
 aside.data {
+    bottom: 0;
+    z-index: 3;
     overflow: hidden;
     background-color: white;
     box-shadow: 0 0 24px rgba($grey9, 0.125);
-    border-radius: 4px;
-    @media (min-width: ($break1 + 1px)) {
-        bottom: 0;
+    @media (min-width: ($break0 + 1px)) {
         left: 50%;
+        border-radius: 4px;
+        transform: translateX(-50%);
+    }
+    @media (min-width: ($break1 + 1px)) {
         width: calc(100% - 48px);
         height: 150px;
         max-width: 1232px;
         margin-bottom: 24px;
-        transform: translateX(-50%);
     }
     @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
-        width: 240px;
-        height: calc(100% - 48px);
-        margin: 24px 0 24px 24px;
-    }
-    @media (max-width: $break0) {
-        bottom: 0;
-        left: 50%;
         width: calc(100% - 32px);
         height: 134px;
         margin-bottom: 16px;
-        transform: translateX(-50%);
+    }
+    @media (max-width: $break0) {
+        left: 0;
+        width: 100%;
+        height: 50%;
     }
 }
 aside.data::before,
 aside.data::after {
     position: absolute;
-    top: 0;
     display: block;
-    width: 16px;
-    height: 100%;
-    @media (max-width: $break0) {
+
+    @media (max-width: $break1) {
         content: '';
+    }
+    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+        top: 0;
+        width: 16px;
+        height: 100%;
+    }
+    @media (max-width: $break0) {
+        left: 0;
+        width: 100%;
+        height: 16px;
     }
 }
 aside.data::before {
-    left: 0;
-    background-image: linear-gradient(90deg, rgba(white, 1), rgba(white, 0));
+    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+        left: 0;
+        background-image: linear-gradient(-90deg, rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%);
+    }
+    @media (max-width: $break0) {
+        top: 0;
+        background-image: linear-gradient(0deg, rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%);
+    }
 }
 aside.data::after {
-    right: 0;
-    background-image: linear-gradient(-90deg, rgba(white, 1), rgba(white, 0));
+    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+        right: 0;
+        background-image: linear-gradient(90deg, rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%);
+    }
+    @media (max-width: $break0) {
+        bottom: 0;
+        background-image: linear-gradient(180deg, rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%);
+    }
 }
 
 /* ------------------------------------------------------------------- SCROLL --- */
 aside.data .scroll {
     display: flex;
-    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
-        height: 100%;
-        flex-flow: column;
+    @media (max-width: $break1) {
+        overflow: auto;
     }
-    @media (max-width: $break0) {
+    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
         height: calc(100% + 32px);
         padding-bottom: 32px;
-        overflow: auto;
         scroll-snap-type: x proximity;
+    }
+    @media (max-width: $break0) {
+        width: calc(100% + 32px);
+        height: 100%;
+        padding-right: 32px;
+        flex-flow: column;
     }
 }
 
@@ -94,29 +118,26 @@ aside.data .group {
         align-content: flex-start;
         flex: 1;
     }
-    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
-        padding: 16px 0;
-        margin: 0 18px;
-        align-content: center;
-        flex: 1;
-    }
-    @media (max-width: $break0) {
-        width: 256px;
-        padding: 0 16px;
-        margin: 16px 0;
+    @media (max-width: $break1) {
         scroll-snap-align: start;
         flex: 0 0 auto;
     }
-}
-aside.data .group:not(:last-child) {
-    @media (min-width: ($break1 + 1px)) {
-        border-right: 1px solid $grey0;
-    }
     @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
-        border-bottom: 1px solid $grey0;
+        width: 224px;
+        padding: 0 16px;
+        margin: 16px 0;
     }
     @media (max-width: $break0) {
+        padding: 16px 0;
+        margin: 0 16px;
+    }
+}
+aside.data .group:not(:last-child) {
+    @media (min-width: ($break0 + 1px)) {
         border-right: 1px solid $grey0;
+    }
+    @media (max-width: $break0) {
+        border-bottom: 1px solid $grey0;
     }
 }
 aside.data .group.speed h2::after,
