--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -32,5 +32,9 @@ $snow3: #f9f9f9;
 $family: ('Inter', sans-serif);
 
 /* -------------------------------------------------------------------- BREAK --- */
-$break1: 1040px;
-$break0: 640px;
+$break2: 1120px;
+$break1: 512px;
+$break0: 408px;
+
+/* ---------------------------------------------------------------------- VAR --- */
+$scroll-feather: rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%;
