--- a/src/scss/module/_map.scss
+++ b/src/scss/module/_map.scss
@@ -10,28 +10,26 @@ section.map {
     z-index: 1;
     width: 100%;
     background-color: $snow6;
-    @media (min-width: ($break0 + 1px)) {
+    @media (min-width: ($break2 + 1px)), (max-width: $break2) and (min-width: ($break1 + 1px)) {
         height: 100%;
     }
-    @media (max-width: $break0) {
-        height: 50%;
-    }
-    @media (min-width: ($break1 + 1px)) {
+    @media (min-width: ($break2 + 1px)) {
         padding: 24px 24px 198px;
     }
-    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+    @media (max-width: $break2) and (min-width: ($break1 + 1px)) {
         padding: 16px 16px 166px;
     }
-    @media (max-width: $break0) {
-        padding: 16px;
+    @media (max-width: $break1) {
+        height: 50%;
+        padding: 16px 16px 72px;
     }
 }
 
 html.detail_active section.map {
-    @media (min-width: ($break1 + 1px)) {
+    @media (min-width: ($break2 + 1px)) {
         padding-left: 368px;
     }
-    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+    @media (max-width: $break2) and (min-width: ($break1 + 1px)) {
         padding-left: 352px;
     }
 }
