--- a/src/scss/module/_control.scss
+++ b/src/scss/module/_control.scss
@@ -4,20 +4,28 @@
 
 /* -------------------------------------------------------------------- ASIDE --- */
 aside.control {
-    top: 0;
-    right: 0;
-    z-index: 2;
+    z-index: 4;
     display: flex;
-    padding: 12px;
     align-items: center;
     background-color: white;
     box-shadow: 0 0 24px rgba($grey9, 0.125);
     border-radius: 4px;
-    @media (min-width: ($break1 + 1px)) {
+    @media (min-width: ($break2 + 1px)), (max-width: $break2) and (min-width: ($break1 + 1px)) {
+        top: 0;
+        right: 0;
+        padding: 12px;
+    }
+    @media (min-width: ($break2 + 1px)) {
         margin: 24px;
     }
-    @media (max-width: $break1) {
+    @media (max-width: $break2) and (min-width: ($break1 + 1px)) {
         margin: 16px;
+    }
+    @media (max-width: $break1) {
+        top: 50%;
+        left: 50%;
+        padding: 6px;
+        transform: translate(-50%, calc(((100% + 12px) * -1)));
     }
 }
 
