--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -5,27 +5,27 @@
 /* ------------------------------------------------------------------- DETAIL --- */
 aside.detail {
     left: 0;
-    z-index: 4;
+    z-index: 3;
     display: flex;
     flex-flow: column;
     transition: transform 160ms;
     will-change: transform;
     pointer-events: none;
-    @media (min-width: ($break0 + 1px)) {
+    @media (min-width: ($break2 + 1px)), (max-width: $break2) and (min-width: ($break1 + 1px)) {
         top: 0;
         width: 320px;
     }
-    @media (min-width: ($break1 + 1px)) {
+    @media (min-width: ($break2 + 1px)) {
         height: calc((100% - 222px));
         margin: 24px;
         transform: translateX(calc(((100% + 24px) * -1)));
     }
-    @media (max-width: $break1) and (min-width: ($break0 + 1px)) {
+    @media (max-width: $break2) and (min-width: ($break1 + 1px)) {
         height: calc((100% - 182px));
         margin: 16px;
         transform: translateX(calc(((100% + 16px) * -1)));
     }
-    @media (max-width: $break0) {
+    @media (max-width: $break1) {
         bottom: 0;
         width: 100%;
         height: 50%;
@@ -33,12 +33,7 @@ aside.detail {
     }
 }
 aside.detail.display {
-    @media (min-width: ($break0 + 1px)) {
-        transform: translateX(0);
-    }
-    @media (max-width: $break0) {
-        transform: translateY(0);
-    }
+    transform: translate(0, 0);
 }
 
 /* -------------------------------------------------------------------- INNER --- */
@@ -48,7 +43,7 @@ aside.detail > div {
     overflow: hidden;
     background-color: white;
     pointer-events: all;
-    @media (min-width: ($break0 + 1px)) {
+    @media (min-width: ($break1 + 1px)) {
         border-radius: 4px;
     }
 }
@@ -62,19 +57,24 @@ aside.detail > div::after {
     z-index: 2;
     display: block;
     width: 100%;
-    height: 24px;
+    height: 16px;
     content: '';
-    background-image: linear-gradient(180deg, rgba(white, 0), rgba(white, 1) 75%, rgba(white, 1) 100%);
+    background-image: linear-gradient(180deg, $scroll-feather);
     border-radius: 0 0 4px 4px;
 }
 
 /* ------------------------------------------------------------------- SCROLL --- */
 aside.detail .scroll {
-    width: calc(100% + 32px);
+    width: calc((100% + 32px));
     max-height: 100%;
-    padding-top: 74px;
     padding-right: 32px;
     overflow: scroll;
+    @media (min-width: ($break2 + 1px)) {
+        padding-top: 74px;
+    }
+    @media (max-width: $break2) {
+        padding-top: 66px;
+    }
 }
 
 /* --------------------------------------------------------------------- META --- */
@@ -84,10 +84,15 @@ aside.detail .meta {
     z-index: 2;
     display: flex;
     width: 100%;
-    padding: 24px 24px 12px;
     flex-wrap: wrap;
     background-color: white;
     border-radius: 4px 4px 0 0;
+    @media (min-width: ($break2 + 1px)) {
+        padding: 24px 24px 12px;
+    }
+    @media (max-width: $break2) {
+        padding: 16px 16px 12px;
+    }
 }
 aside.detail .meta h1 {
     margin-bottom: 8px;
@@ -116,11 +121,18 @@ aside.detail h2 {
     position: sticky;
     top: 0;
     z-index: 1;
-    width: calc((100% + 48px));
-    padding: 8px 24px 12px;
-    margin: 0 -24px;
     color: $grey9;
     background-color: white;
+    @media (min-width: ($break2 + 1px)) {
+        width: calc((100% + 48px));
+        padding: 8px 24px 12px;
+        margin: 0 -24px;
+    }
+    @media (max-width: $break2) {
+        width: calc((100% + 32px));
+        padding: 8px 16px 12px;
+        margin: 0 -16px;
+    }
 }
 aside.detail h2[stuck] {
     box-shadow: 0 0 8px rgba(black, 0.25);
@@ -144,15 +156,31 @@ aside.detail .group {
     padding: 0 24px 20px;
     flex-wrap: wrap;
     background-color: white;
+    @media (min-width: ($break2 + 1px)) {
+        padding: 0 24px 20px;
+    }
+    @media (max-width: $break2) {
+        padding: 0 16px 14px;
+    }
 }
 aside.detail .group:not(:nth-child(2)) {
-    padding-top: 12px;
+    @media (min-width: ($break2 + 1px)) {
+        padding-top: 12px;
+    }
+    @media (max-width: $break2) {
+        padding-top: 8px;
+    }
 }
 aside.detail .group:not(:last-child) {
     border-bottom: 1px solid $grey0;
 }
 aside.detail .group:last-child {
-    padding-bottom: 24px;
+    @media (min-width: ($break2 + 1px)) {
+        padding-bottom: 24px;
+    }
+    @media (max-width: $break2) {
+        padding-bottom: 16px;
+    }
 }
 
 /* ------------------------------------------------------------- GROUP : STAT --- */
