--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -28,6 +28,9 @@
 /* -------------------------------------------------------------------- ASIDE --- */
 @import 'component/aside';
 
+/* --------------------------------------------------------------------- FORM --- */
+@import 'component/form';
+
 /* -------------------------------------------------------------------- GROUP --- */
 @import 'component/group';
 
