--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -3,26 +3,33 @@
 /* ////////////////////////////////////////////////////////////////////////////// */
 
 /* -------------------------------------------------------------------- COLOR --- */
-/* plum */
-$plum9: #c6196b;
-$plum6: #dd1c77;
-
-/* moss */
-$moss6: #438a13;
+/* coco */
+$coco6: #b08159;
+$coco0: #f2eae3;
 
 /* gold */
 $gold6: #fbc531;
 $gold0: #fffbef;
-
-/* coco */
-$coco6: #b08159;
-$coco0: #f2eae3;
 
 /* grey */
 $grey9: #535353;
 $grey6: #a2a2a2;
 $grey3: #b4b4b4;
 $grey0: #ebebeb;
+
+/* moss */
+$moss6: #438a13;
+$moss3: #c9ded9;
+$moss0: #e8f2ed;
+
+/* plum */
+$plum6: #5d21d2;
+$plum3: #cebcf2;
+$plum0: #efe9fb;
+
+/* pink */
+$pink9: #c6196b;
+$pink6: #dd1c77;
 
 /* snow */
 $snow6: #f4f4f4;
