--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -266,7 +266,7 @@ aside.detail .group.split table td.elevation:after {
 aside.detail .group.split table td.delta div {
     width: calc((#{var(--delta)} * 100%));
     height: 12px;
-    background-color: $pink6;
+    background-color: $plum6;
     border-radius: 2px;
 }
 aside.detail .group.split table tr.fastest td.delta div {
