--- a/src/scss/global/_var.scss
+++ b/src/scss/global/_var.scss
@@ -22,11 +22,11 @@ $moss6: #438a13;
 $moss3: #c9ded9;
 $moss0: #e8f2ed;
 
-/* plum */
-$plum9: #5d21d2;
-$plum6: #6d37d7;
-$plum3: #cebcf2;
-$plum0: #efe9fb;
+/* pink */
+$pink9: #c6196b;
+$pink6: #dd1c77;
+$pink3: #f4d1e1;
+$pink0: #f9e8f0;
 
 /* snow */
 $snow6: #f4f4f4;
