Replaced 'moving time' award with 'fasting avg. pace'

--- a/src/scss/module/_detail.scss
+++ b/src/scss/module/_detail.scss
@@ -335,6 +335,6 @@ aside.detail .group.award .item.distance::after {
 aside.detail .group.award .item.elevation::after {
     content: 'Elevation\A Gain';
 }
-aside.detail .group.award .item.time::after {
-    content: 'Moving\A Time';
+aside.detail .group.award .item.pace::after {
+    content: 'Fastest\A Avg. Pace';
 }
